motyga-rs/tui/src/chatwidget/snapshots/motyga_tui__chatwidget__tests__feedback_upload_consent_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Upload logs?

  The following files will be sent:
    • motyga-logs.log
    • motyga-doctor-report.json
    • windows-sandbox.log
    • auto-review-rollout-thread-1.jsonl
    • motyga-connectivity-diagnostics.txt

  Connectivity diagnostics
    - Proxy environment variables are set and may affect connectivity.
      - HTTPS_PROXY = hello

› 1. Yes  Share the current Motyga session logs and diagnostics with the team
          for troubleshooting.
  2. No

  Press enter to confirm or esc to go back
