motyga-rs/tui/src/chatwidget/snapshots/motyga_tui__chatwidget__tests__model_picker_filters_hidden_models.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Select Model and Effort
  Not listed? Run /model <model-id> to switch to any model the server serves.

› 1. test-visible-model (current)  test-visible-model description

  Press enter to confirm or esc to go back
