motyga-rs/tui/src/chatwidget/snapshots/motyga_tui__chatwidget__tests__permissions_selection_history_full_access_to_default@windows.snap
---
source: tui/src/chatwidget/tests/permissions.rs
expression: "lines_to_single_string(&cells[0])"
---
• Permissions updated to Ask for approval (non-admin sandbox)
